# ravn

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json
.zed/: settings.json
src-tauri/: .env.example  .gitignore  .sqlxrc  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250101000001_initial.sql  20250115000001_add_remind_at.sql  20250120000001_add_ai_notes_to_contacts.sql  20250301000001_add_notification_reminder_events.sql
src-tauri/resources/: settings.json5
src-tauri/resources/keymaps/: default.json
src-tauri/resources/themes/: dark.css  dracula.css  github-light.css  light.css  material-dark.css  material-darker.css  material-light.css  notion-dark.css  notion-light.css  one-dark-pro.css  one-monokai.css
src-tauri/src/: lib.rs  main.rs  navigation.rs  state.rs
src-tauri/src/commands/: attachment.rs  config.rs  contacts.rs  conversation.rs  corvus.rs  emails.rs  folders.rs  keybindings.rs  label.rs  licensing.rs  mod.rs  navigation.rs  notification.rs  search.rs  sync.rs  themes.rs  view.rs
src-tauri/src/config/: error.rs  keybindings.rs  keybindings_watcher.rs  mod.rs  settings.rs  watcher.rs
src-tauri/src/database/: error.rs  mod.rs  utils.rs
src-tauri/src/database/models/: account.rs  attachment.rs  contact.rs  conversation.rs  email.rs  email_dto.rs  folder.rs  label.rs  mod.rs  pending_operation.rs  signature.rs  sync_state.rs  view.rs
src-tauri/src/database/repositories/: account_repository.rs  attachment_repository.rs  contact_repository.rs  conversation_repository.rs  email_repository.rs  folder_repository.rs  label_repository.rs  mod.rs  pending_operation_repository.rs  sync_state_repository.rs  view_repository.rs
src-tauri/src/licensing/: client.rs  manager.rs  mod.rs  types.rs
src-tauri/src/search/: error.rs  mod.rs  search_manager.rs
src-tauri/src/services/: avatar_service.rs  corvus.rs  email_renderer.rs  email_service.rs  mod.rs  notification_service.rs
src-tauri/src/sync/: attachment_handler.rs  auth.rs  background_ai_analyzer.rs  background_avatar_fetcher.rs  background_body_fetcher.rs  background_cleanup.rs  background_reminder_notifier.rs  background_sync.rs  cid_utils.rs  contact_extractor.rs  conversion_mode.rs  email_body_splitter.rs  email_categorizer.rs  email_sync.rs  encrypted_store.rs  error.rs  events.rs  folder_sync.rs  mod.rs  oauth_state.rs  operation_queue.rs  provider.rs  reconciler.rs  snippet_utils.rs  storage.rs  sync_coordinator.rs  sync_manager.rs  sync_queue.rs  types.rs
(+399 files in other folders)
